--- a/index.html
+++ b/index.html
@@ -4,27 +4,55 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Liste des Cubes 3D</title>
+    <!-- Link vers Bootstrap CSS -->
+    <link href="https://stackpath.bootstrapcdn.com/bootstrap/4.5.2/css/bootstrap.min.css" rel="stylesheet">
+    <!-- Link vers Three.js -->
+    <script src="https://cdnjs.cloudflare.com/ajax/libs/three.js/r128/three.min.js"></script>
 </head>
 <body>
-    <h1>Liste des Cubes 3D</h1>
-    <ul>
-        <li><a href="ODD1/index.html">Cube 3D - ODD1</a></li>
-        <li><a href="ODD2/index.html">Cube 3D - ODD2</a></li>
-        <li><a href="ODD3/index.html">Cube 3D - ODD3</a></li>
-        <li><a href="ODD4/index.html">Cube 3D - ODD4</a></li>
-        <li><a href="ODD5/index.html">Cube 3D - ODD5</a></li>
-        <li><a href="ODD6/index.html">Cube 3D - ODD6</a></li>
-        <li><a href="ODD7/index.html">Cube 3D - ODD7</a></li>
-        <li><a href="ODD8/index.html">Cube 3D - ODD8</a></li>
-        <li><a href="ODD9/index.html">Cube 3D - ODD9</a></li>
-        <li><a href="ODD10/index.html">Cube 3D - ODD10</a></li>
-        <li><a href="ODD11/index.html">Cube 3D - ODD11</a></li>
-        <li><a href="ODD12/index.html">Cube 3D - ODD12</a></li>
-        <li><a href="ODD13/index.html">Cube 3D - ODD13</a></li>
-        <li><a href="ODD14/index.html">Cube 3D - ODD14</a></li>
-        <li><a href="ODD15/index.html">Cube 3D - ODD15</a></li>
-        <li><a href="ODD16/index.html">Cube 3D - ODD16</a></li>
-        <li><a href="ODD17/index.html">Cube 3D - ODD17</a></li>
-    </ul>
+    <div class="container">
+        <h1>Liste des Cubes 3D</h1>
+        <div class="row">
+            <div class="col-md-6">
+                <ul>
+                    <li><a href="ODD1/index.html">Cube 3D - ODD1</a></li>
+                    <li><a href="ODD2/index.html">Cube 3D - ODD2</a></li>
+                    <!-- Ajoutez les autres liens ici -->
+                </ul>
+            </div>
+            <div class="col-md-6" id="cube-container">
+                <!-- Ici sera affiché le cube 3D -->
+            </div>
+        </div>
+    </div>
+
+    <!-- Scripts pour initialiser les cubes 3D -->
+    <script>
+        // Placez votre code JavaScript Three.js ici pour créer et afficher les cubes 3D
+        // par exemple :
+        var scene = new THREE.Scene();
+        var camera = new THREE.PerspectiveCamera(75, window.innerWidth / window.innerHeight, 0.1, 1000);
+        var renderer = new THREE.WebGLRenderer();
+        renderer.setSize(window.innerWidth / 2, window.innerHeight);
+        document.getElementById('cube-container').appendChild(renderer.domElement);
+
+        var geometry = new THREE.BoxGeometry();
+        var material = new THREE.MeshBasicMaterial({ color: 0x00ff00 });
+        var cube = new THREE.Mesh(geometry, material);
+        scene.add(cube);
+
+        camera.position.z = 5;
+
+        var animate = function () {
+            requestAnimationFrame(animate);
+
+            cube.rotation.x += 0.01;
+            cube.rotation.y += 0.01;
+
+            renderer.render(scene, camera);
+        };
+
+        animate();
+    </script>
 </body>
 </html>
