--- a/index.html
+++ b/index.html
@@ -4,27 +4,32 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Liste des Cubes 3D</title>
+    <link rel="stylesheet" href="css/styles.css">
 </head>
 <body>
-    <h1>Liste des Cubes 3D</h1>
-    <ul>
-        <li><a href="ODD1/index.html">Cube 3D - ODD1</a></li>
-        <li><a href="ODD2/index.html">Cube 3D - ODD2</a></li>
-        <li><a href="ODD3/index.html">Cube 3D - ODD3</a></li>
-        <li><a href="ODD4/index.html">Cube 3D - ODD4</a></li>
-        <li><a href="ODD5/index.html">Cube 3D - ODD5</a></li>
-        <li><a href="ODD6/index.html">Cube 3D - ODD6</a></li>
-        <li><a href="ODD7/index.html">Cube 3D - ODD7</a></li>
-        <li><a href="ODD8/index.html">Cube 3D - ODD8</a></li>
-        <li><a href="ODD9/index.html">Cube 3D - ODD9</a></li>
-        <li><a href="ODD10/index.html">Cube 3D - ODD10</a></li>
-        <li><a href="ODD11/index.html">Cube 3D - ODD11</a></li>
-        <li><a href="ODD12/index.html">Cube 3D - ODD12</a></li>
-        <li><a href="ODD13/index.html">Cube 3D - ODD13</a></li>
-        <li><a href="ODD14/index.html">Cube 3D - ODD14</a></li>
-        <li><a href="ODD15/index.html">Cube 3D - ODD15</a></li>
-        <li><a href="ODD16/index.html">Cube 3D - ODD16</a></li>
-        <li><a href="ODD17/index.html">Cube 3D - ODD17</a></li>
-    </ul>
+    <div id="links-container">
+        <h1>Liste des Cubes 3D</h1>
+        <ul>
+            <li><a href="#" data-cube="ODD1">Cube 3D - ODD1</a></li>
+            <li><a href="#" data-cube="ODD2">Cube 3D - ODD2</a></li>
+            <li><a href="#" data-cube="ODD3">Cube 3D - ODD3</a></li>
+            <li><a href="#" data-cube="ODD4">Cube 3D - ODD4</a></li>
+            <li><a href="#" data-cube="ODD5">Cube 3D - ODD5</a></li>
+            <li><a href="#" data-cube="ODD6">Cube 3D - ODD6</a></li>
+            <li><a href="#" data-cube="ODD7">Cube 3D - ODD7</a></li>
+            <li><a href="#" data-cube="ODD8">Cube 3D - ODD8</a></li>
+            <li><a href="#" data-cube="ODD9">Cube 3D - ODD9</a></li>
+            <li><a href="#" data-cube="ODD10">Cube 3D - ODD10</a></li>
+            <li><a href="#" data-cube="ODD11">Cube 3D - ODD11</a></li>
+            <li><a href="#" data-cube="ODD12">Cube 3D - ODD12</a></li>
+            <li><a href="#" data-cube="ODD13">Cube 3D - ODD13</a></li>
+            <li><a href="#" data-cube="ODD14">Cube 3D - ODD14</a></li>
+            <li><a href="#" data-cube="ODD15">Cube 3D - ODD15</a></li>
+            <li><a href="#" data-cube="ODD16">Cube 3D - ODD16</a></li>
+            <li><a href="#" data-cube="ODD17">Cube 3D - ODD17</a></li>
+        </ul>
+    </div>
+    <div id="cube-container"></div>
+    <script src="js/main.js"></script>
 </body>
 </html>
