--- a/index.html
+++ b/index.html
@@ -11,28 +11,28 @@
 <body>
     <div class="container-fluid">
         <div class="row">
-            <!-- Colonne de liens -->
+            <!-- Colonne de liens transformée en grille d'images -->
             <div class="col-md-4 p-3 bg-light">
                 <h1>Liste des Cubes 3D</h1>
-                <div class="list-group">
-                    <!-- Utiliser 'list-group-item' pour un style Bootstrap -->
-                    <a href="#" class="list-group-item list-group-item-action" data-cube="ODD1">Cube 3D - ODD1</a>
-                    <a href="#" class="list-group-item list-group-item-action" data-cube="ODD2">Cube 3D - ODD2</a>
-                    <a href="#" class="list-group-item list-group-item-action" data-cube="ODD3">Cube 3D - ODD3</a>
-                    <a href="#" class="list-group-item list-group-item-action" data-cube="ODD4">Cube 3D - ODD4</a>
-                    <a href="#" class="list-group-item list-group-item-action" data-cube="ODD5">Cube 3D - ODD5</a>
-                    <a href="#" class="list-group-item list-group-item-action" data-cube="ODD6">Cube 3D - ODD6</a>
-                    <a href="#" class="list-group-item list-group-item-action" data-cube="ODD7">Cube 3D - ODD7</a>
-                    <a href="#" class="list-group-item list-group-item-action" data-cube="ODD8">Cube 3D - ODD8</a>
-                    <a href="#" class="list-group-item list-group-item-action" data-cube="ODD9">Cube 3D - ODD9</a>
-                    <a href="#" class="list-group-item list-group-item-action" data-cube="ODD10">Cube 3D - ODD10</a>
-                    <a href="#" class="list-group-item list-group-item-action" data-cube="ODD11">Cube 3D - ODD11</a>
-                    <a href="#" class="list-group-item list-group-item-action" data-cube="ODD12">Cube 3D - ODD12</a>
-                    <a href="#" class="list-group-item list-group-item-action" data-cube="ODD13">Cube 3D - ODD13</a>
-                    <a href="#" class="list-group-item list-group-item-action" data-cube="ODD14">Cube 3D - ODD14</a>
-                    <a href="#" class="list-group-item list-group-item-action" data-cube="ODD15">Cube 3D - ODD15</a>
-                    <a href="#" class="list-group-item list-group-item-action" data-cube="ODD16">Cube 3D - ODD16</a>
-                    <a href="#" class="list-group-item list-group-item-action" data-cube="ODD17">Cube 3D - ODD17</a>
+                <div class="row">
+                    <!-- Grille pour chaque ODD avec logos -->
+                    <div class="col-4 cube-logo" data-cube="ODD1"><img src="img/WebGPic/webg01.png" alt="ODD1" class="img-fluid"></div>
+                    <div class="col-4 cube-logo" data-cube="ODD2"><img src="img/WebGPic/webg02.png" alt="ODD2" class="img-fluid"></div>
+                    <div class="col-4 cube-logo" data-cube="ODD3"><img src="img/WebGPic/webg03.png" alt="ODD3" class="img-fluid"></div>
+                    <div class="col-4 cube-logo" data-cube="ODD4"><img src="img/WebGPic/webg04.png" alt="ODD4" class="img-fluid"></div>
+                    <div class="col-4 cube-logo" data-cube="ODD5"><img src="img/WebGPic/webg05.png" alt="ODD5" class="img-fluid"></div>
+                    <div class="col-4 cube-logo" data-cube="ODD6"><img src="img/WebGPic/webg06.png" alt="ODD6" class="img-fluid"></div>
+                    <div class="col-4 cube-logo" data-cube="ODD7"><img src="img/WebGPic/webg07.png" alt="ODD7" class's="img-fluid"></div>
+                    <div class="col-4 cube-logo" data-cube="ODD8"><img src="img/WebGPic/webg08.png" alt="ODD8" class="img-fluid"></div>
+                    <div class="col-4 cube-logo" data-cube="ODD9"><img src="img/WebGPic/webg09.png" alt="ODD9" class="img-fluid"></div>
+                    <div class="col-4 cube-logo" data-cube="ODD10"><img src="img/WebGPic/webg10.png" alt="ODD10" class="img-fluid"></div>
+                    <div class="col-4 cube-logo" data-cube="ODD11"><img src="img/WebGPic/webg11.png" alt="ODD11" class="img-fluid"></div>
+                    <div class="col-4 cube-logo" data-cube="ODD12"><img src="img/WebGPic/webg12.png" alt="ODD12" class="img-fluid"></div>
+                    <div class="col-4 cube-logo" data-cube="ODD13"><img src="img/WebGPic/webg13.png" alt="ODD13" class="img-fluid"></div>
+                    <div class="col-4 cube-logo" data-cube="ODD14"><img src="img/WebGPic/webg14.png" alt="ODD14" class="img-fluid"></div>
+                    <div class="col-4 cube-logo" data-cube="ODD15"><img src="img/WebGPic/webg15.png" alt="ODD15" class="img-fluid"></div>
+                    <div class="col-4 cube-logo" data-cube="ODD16"><img src="img/WebGPic/webg16.png" alt="ODD16" class="img-fluid"></div>
+                    <div class="col-4 cube-logo" data-cube="ODD17"><img src="img/WebGPic/webg17.png" alt="ODD17" class="img-fluid"></div>
                 </div>
             </div>
             <!-- Colonne du conteneur de cube -->
@@ -44,8 +44,8 @@
         </div>
     </div>
     <script src="js/main.js"></script>
-    <!-- Optionnel: c'est pour inclure les scripts JavaScript Bootstrap en fonction des besoins-->
     <script src="https://code.jquery.com/jquery-3.5.1.slim.min.js"></script>
     <script src="https://cdn.jsdelivr.net/npm/@popperjs/core@2.9.2/dist/umd/popper.min.js"></script>
     <script src="https://stackpath.bootstrapcdn.com/bootstrap/4.5.2/js/bootstrap.min.js"></script>
-</body
+</body>
+</html>
