grid plus banieres

--- a/index.html
+++ b/index.html
@@ -6,7 +6,7 @@
     <title>Liste des Cubes 3D</title>
     <!-- Bootstrap CSS -->
     <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.5.2/css/bootstrap.min.css">
-    <link rel="stylesheet" href="css/styles.css"> <!-- Chemin vers le fichier CSS -->
+    <link rel="stylesheet" href="css/styles.css">
 </head>
 <body>
     <div class="container-fluid">
@@ -22,7 +22,7 @@
                     <div class="col-4 cube-logo" data-cube="ODD4"><img src="img/WebGPic/webg04.png" alt="ODD4" class="img-fluid"></div>
                     <div class="col-4 cube-logo" data-cube="ODD5"><img src="img/WebGPic/webg05.png" alt="ODD5" class="img-fluid"></div>
                     <div class="col-4 cube-logo" data-cube="ODD6"><img src="img/WebGPic/webg06.png" alt="ODD6" class="img-fluid"></div>
-                    <div class="col-4 cube-logo" data-cube="ODD7"><img src="img/WebGPic/webg07.png" alt="ODD7" class='img-fluid'></div>
+                    <div class="col-4 cube-logo" data-cube="ODD7"><img src="img/WebGPic/webg07.png" alt="ODD7" class's="img-fluid"></div>
                     <div class="col-4 cube-logo" data-cube="ODD8"><img src="img/WebGPic/webg08.png" alt="ODD8" class="img-fluid"></div>
                     <div class="col-4 cube-logo" data-cube="ODD9"><img src="img/WebGPic/webg09.png" alt="ODD9" class="img-fluid"></div>
                     <div class="col-4 cube-logo" data-cube="ODD10"><img src="img/WebGPic/webg10.png" alt="ODD10" class="img-fluid"></div>
@@ -43,7 +43,7 @@
             </div>
         </div>
     </div>
-    <script src="js/main.js"></script> <!-- Chemin vers le fichier JavaScript -->
+    <script src="js/main.js"></script>
     <script src="https://code.jquery.com/jquery-3.5.1.slim.min.js"></script>
     <script src="https://cdn.jsdelivr.net/npm/@popperjs/core@2.9.2/dist/umd/popper.min.js"></script>
     <script src="https://stackpath.bootstrapcdn.com/bootstrap/4.5.2/js/bootstrap.min.js"></script>
