grid plus banieres

--- a/index.html
+++ b/index.html
@@ -22,7 +22,7 @@
                     <div class="col-4 cube-logo" data-cube="ODD4"><img src="img/WebGPic/webg04.png" alt="ODD4" class="img-fluid"></div>
                     <div class="col-4 cube-logo" data-cube="ODD5"><img src="img/WebGPic/webg05.png" alt="ODD5" class="img-fluid"></div>
                     <div class="col-4 cube-logo" data-cube="ODD6"><img src="img/WebGPic/webg06.png" alt="ODD6" class="img-fluid"></div>
-                    <div class="col-4 cube-logo" data-cube="ODD7"><img src="img/WebGPic/webg07.png" alt="ODD7" class's="img-fluid"></div>
+                    <div class="col-4 cube-logo" data-cube="ODD7"><img src="img/WebGPic/webg07.png" alt="ODD7" class='img-fluid'></div>
                     <div class="col-4 cube-logo" data-cube="ODD8"><img src="img/WebGPic/webg08.png" alt="ODD8" class="img-fluid"></div>
                     <div class="col-4 cube-logo" data-cube="ODD9"><img src="img/WebGPic/webg09.png" alt="ODD9" class="img-fluid"></div>
                     <div class="col-4 cube-logo" data-cube="ODD10"><img src="img/WebGPic/webg10.png" alt="ODD10" class="img-fluid"></div>
