--- a/index.html
+++ b/index.html
@@ -33,11 +33,17 @@
                     <div class="col-4 cube-logo" data-cube="ODD15"><img src="img/WebGPic/webg15.png" alt="ODD15" class="img-fluid"></div>
                     <div class="col-4 cube-logo" data-cube="ODD16"><img src="img/WebGPic/webg16.png" alt="ODD16" class="img-fluid"></div>
                     <div class="col-4 cube-logo" data-cube="ODD17"><img src="img/WebGPic/webg17.png" alt="ODD17" class="img-fluid"></div>
+                    <!-- Ajoutez les autres logos ici -->
                 </div>
             </div>
-            <!-- Colonne du conteneur de cube -->
+            <!-- Colonne du conteneur de cube avec bannière -->
             <div class="col-md-8 p-3">
                 <div id="cube-container" class="w-100 h-100 d-flex justify-content-center align-items-center">
+                    <!-- Bannière pour le cube -->
+                    <div class="banner-container">
+                        <img src="img/Webbanderollesodd/bODD1.jpg" alt="Bannière pour ODD1" style="width: 50%;">
+                    </div>
+                    <!-- Espace de visualisation du cube -->
                     <!-- Le cube doit s'afficher ici -->
                 </div>
             </div>
