--- a/index.html
+++ b/index.html
@@ -11,40 +11,31 @@
 <body>
     <div class="container-fluid">
         <div class="row">
-            <!-- Colonne de liens transformée en grille d'images -->
             <div class="col-md-4 p-3 bg-light">
                 <h1>Liste des Cubes 3D</h1>
                 <div class="row">
-                    <!-- Grille pour chaque ODD avec logos -->
                     <div class="col-4 cube-logo" data-cube="ODD1"><img src="img/WebGPic/webg01.png" alt="ODD1" class="img-fluid"></div>
                     <div class="col-4 cube-logo" data-cube="ODD2"><img src="img/WebGPic/webg02.png" alt="ODD2" class="img-fluid"></div>
                     <div class="col-4 cube-logo" data-cube="ODD3"><img src="img/WebGPic/webg03.png" alt="ODD3" class="img-fluid"></div>
                     <div class="col-4 cube-logo" data-cube="ODD4"><img src="img/WebGPic/webg04.png" alt="ODD4" class="img-fluid"></div>
                     <div class="col-4 cube-logo" data-cube="ODD5"><img src="img/WebGPic/webg05.png" alt="ODD5" class="img-fluid"></div>
                     <div class="col-4 cube-logo" data-cube="ODD6"><img src="img/WebGPic/webg06.png" alt="ODD6" class="img-fluid"></div>
-                    <div class="col-4 cube-logo" data-cube="ODD7"><img src="img/WebGPic/webg07.png" alt="ODD7" class='img-fluid'></div>
+                    <div class="col-4 cube-logo" data-cube="ODD7"><img src="img/WebGPic/webg07.png" alt="ODD7" class="img-fluid"></div>
                     <div class="col-4 cube-logo" data-cube="ODD8"><img src="img/WebGPic/webg08.png" alt="ODD8" class="img-fluid"></div>
                     <div class="col-4 cube-logo" data-cube="ODD9"><img src="img/WebGPic/webg09.png" alt="ODD9" class="img-fluid"></div>
                     <div class="col-4 cube-logo" data-cube="ODD10"><img src="img/WebGPic/webg10.png" alt="ODD10" class="img-fluid"></div>
-                    <div class="col-4 cube-logo" data-cube="ODD11"><img src="img/WebGPic/webg11.png" alt="ODD11" class="img-fluid"></div>
+                    <div class="col-4 cube-logo" data-cube="ODD11"><img src="img/WebGPic/webg11.png" alt="ODD11" class'smooth"/>
                     <div class="col-4 cube-logo" data-cube="ODD12"><img src="img/WebGPic/webg12.png" alt="ODD12" class="img-fluid"></div>
                     <div class="col-4 cube-logo" data-cube="ODD13"><img src="img/WebGPic/webg13.png" alt="ODD13" class="img-fluid"></div>
                     <div class="col-4 cube-logo" data-cube="ODD14"><img src="img/WebGPic/webg14.png" alt="ODD14" class="img-fluid"></div>
                     <div class="col-4 cube-logo" data-cube="ODD15"><img src="img/WebGPic/webg15.png" alt="ODD15" class="img-fluid"></div>
                     <div class="col-4 cube-logo" data-cube="ODD16"><img src="img/WebGPic/webg16.png" alt="ODD16" class="img-fluid"></div>
                     <div class="col-4 cube-logo" data-cube="ODD17"><img src="img/WebGPic/webg17.png" alt="ODD17" class="img-fluid"></div>
-                    <!-- Ajoutez les autres logos ici -->
                 </div>
             </div>
-            <!-- Colonne du conteneur de cube avec bannière -->
             <div class="col-md-8 p-3">
                 <div id="cube-container" class="w-100 h-100 d-flex justify-content-center align-items-center">
-                    <!-- Bannière pour le cube -->
-                    <div class="banner-container">
-                        <img src="img/Webbanderollesodd/bODD1.jpg" alt="Bannière pour ODD1" style="width: 50%;">
-                    </div>
-                    <!-- Espace de visualisation du cube -->
-                    <!-- Le cube doit s'afficher ici -->
+                    <!-- Espace de visualisation du cube, il se remplira dynamiquement avec le contenu du cube -->
                 </div>
             </div>
         </div>
