--- a/index.html
+++ b/index.html
@@ -14,6 +14,7 @@
             <div class="col-md-4 p-3 bg-light">
                 <h1>Liste des Cubes 3D</h1>
                 <div class="row">
+                    <!-- Affichage des logos pour chaque cube -->
                     <div class="col-4 cube-logo" data-cube="ODD1"><img src="img/WebGPic/webg01.png" alt="ODD1" class="img-fluid"></div>
                     <div class="col-4 cube-logo" data-cube="ODD2"><img src="img/WebGPic/webg02.png" alt="ODD2" class="img-fluid"></div>
                     <div class="col-4 cube-logo" data-cube="ODD3"><img src="img/WebGPic/webg03.png" alt="ODD3" class="img-fluid"></div>
@@ -24,7 +25,7 @@
                     <div class="col-4 cube-logo" data-cube="ODD8"><img src="img/WebGPic/webg08.png" alt="ODD8" class="img-fluid"></div>
                     <div class="col-4 cube-logo" data-cube="ODD9"><img src="img/WebGPic/webg09.png" alt="ODD9" class="img-fluid"></div>
                     <div class="col-4 cube-logo" data-cube="ODD10"><img src="img/WebGPic/webg10.png" alt="ODD10" class="img-fluid"></div>
-                    <div class="col-4 cube-logo" data-cube="ODD11"><img src="img/WebGPic/webg11.png" alt="ODD11" class'smooth"/>
+                    <div class="col-4 cube-logo" data-cube="ODD11"><img src="img/WebGPic/webg11.png" alt="ODD11" class="img-fluid"></div>
                     <div class="col-4 cube-logo" data-cube="ODD12"><img src="img/WebGPic/webg12.png" alt="ODD12" class="img-fluid"></div>
                     <div class="col-4 cube-logo" data-cube="ODD13"><img src="img/WebGPic/webg13.png" alt="ODD13" class="img-fluid"></div>
                     <div class="col-4 cube-logo" data-cube="ODD14"><img src="img/WebGPic/webg14.png" alt="ODD14" class="img-fluid"></div>
@@ -34,8 +35,9 @@
                 </div>
             </div>
             <div class="col-md-8 p-3">
+                <div id="banner-space" class="w-100"><!-- Espace pour les bannières --></div>
                 <div id="cube-container" class="w-100 h-100 d-flex justify-content-center align-items-center">
-                    <!-- Espace de visualisation du cube, il se remplira dynamiquement avec le contenu du cube -->
+                    <!-- Espace de visualisation du cube -->
                 </div>
             </div>
         </div>
