--- a/index.html
+++ b/index.html
@@ -15,23 +15,23 @@
                 <h1>Liste des Cubes 3D</h1>
                 <div class="row">
                     <!-- Affichage des logos pour chaque cube -->
-                    <div class="col-4 cube-logo" data-cube="ODD1"><img src="img/WebGPic/webg01.png" alt="ODD1" class="img-fluid"></div>
-                    <div class="col-4 cube-logo" data-cube="ODD2"><img src="img/WebGPic/webg02.png" alt="ODD2" class="img-fluid"></div>
-                    <div class="col-4 cube-logo" data-cube="ODD3"><img src="img/WebGPic/webg03.png" alt="ODD3" class="img-fluid"></div>
-                    <div class="col-4 cube-logo" data-cube="ODD4"><img src="img/WebGPic/webg04.png" alt="ODD4" class="img-fluid"></div>
-                    <div class="col-4 cube-logo" data-cube="ODD5"><img src="img/WebGPic/webg05.png" alt="ODD5" class="img-fluid"></div>
-                    <div class="col-4 cube-logo" data-cube="ODD6"><img src="img/WebGPic/webg06.png" alt="ODD6" class="img-fluid"></div>
-                    <div class="col-4 cube-logo" data-cube="ODD7"><img src="img/WebGPic/webg07.png" alt="ODD7" class="img-fluid"></div>
-                    <div class="col-4 cube-logo" data-cube="ODD8"><img src="img/WebGPic/webg08.png" alt="ODD8" class="img-fluid"></div>
-                    <div class="col-4 cube-logo" data-cube="ODD9"><img src="img/WebGPic/webg09.png" alt="ODD9" class="img-fluid"></div>
-                    <div class="col-4 cube-logo" data-cube="ODD10"><img src="img/WebGPic/webg10.png" alt="ODD10" class="img-fluid"></div>
-                    <div class="col-4 cube-logo" data-cube="ODD11"><img src="img/WebGPic/webg11.png" alt="ODD11" class="img-fluid"></div>
-                    <div class="col-4 cube-logo" data-cube="ODD12"><img src="img/WebGPic/webg12.png" alt="ODD12" class="img-fluid"></div>
-                    <div class="col-4 cube-logo" data-cube="ODD13"><img src="img/WebGPic/webg13.png" alt="ODD13" class="img-fluid"></div>
-                    <div class="col-4 cube-logo" data-cube="ODD14"><img src="img/WebGPic/webg14.png" alt="ODD14" class="img-fluid"></div>
-                    <div class="col-4 cube-logo" data-cube="ODD15"><img src="img/WebGPic/webg15.png" alt="ODD15" class="img-fluid"></div>
-                    <div class="col-4 cube-logo" data-cube="ODD16"><img src="img/WebGPic/webg16.png" alt="ODD16" class="img-fluid"></div>
-                    <div class="col-4 cube-logo" data-cube="ODD17"><img src="img/WebGPic/webg17.png" alt="ODD17" class="img-fluid"></div>
+                    <div class="col-2 cube-logo" data-cube="ODD1"><img src="img/WebGPic/webg01.png" alt="ODD1" class="img-fluid"></div>
+                    <div class="col-2 cube-logo" data-cube="ODD2"><img src="img/WebGPic/webg02.png" alt="ODD2" class="img-fluid"></div>
+                    <div class="col-2 cube-logo" data-cube="ODD3"><img src="img/WebGPic/webg03.png" alt="ODD3" class="img-fluid"></div>
+                    <div class="col-2 cube-logo" data-cube="ODD4"><img src="img/WebGPic/webg04.png" alt="ODD4" class="img-fluid"></div>
+                    <div class="col-2 cube-logo" data-cube="ODD5"><img src="img/WebGPic/webg05.png" alt="ODD5" class="img-fluid"></div>
+                    <div class="col-2 cube-logo" data-cube="ODD6"><img src="img/WebGPic/webg06.png" alt="ODD6" class="img-fluid"></div>
+                    <div class="col-2 cube-logo" data-cube="ODD7"><img src="img/WebGPic/webg07.png" alt="ODD7" class="img-fluid"></div>
+                    <div class="col-2 cube-logo" data-cube="ODD8"><img src="img/WebGPic/webg08.png" alt="ODD8" class="img-fluid"></div>
+                    <div class="col-2 cube-logo" data-cube="ODD9"><img src="img/WebGPic/webg09.png" alt="ODD9" class="img-fluid"></div>
+                    <div class="col-2 cube-logo" data-cube="ODD10"><img src="img/WebGPic/webg10.png" alt="ODD10" class="img-fluid"></div>
+                    <div class="col-2 cube-logo" data-cube="ODD11"><img src="img/WebGPic/webg11.png" alt="ODD11" class="img-fluid"></div>
+                    <div class="col-2 cube-logo" data-cube="ODD12"><img src="img/WebGPic/webg12.png" alt="ODD12" class="img-fluid
+                    <div class="col-2 cube-logo" data-cube="ODD13"><img src="img/WebGPic/webg13.png" alt="ODD13" class="img-fluid"></div>
+                    <div class="col-2 cube-logo" data-cube="ODD14"><img src="img/WebGPic/webg14.png" alt="ODD14" class="img-fluid"></div>
+                    <div class="col-2 cube-logo" data-cube="ODD15"><img src="img/WebGPic/webg15.png" alt="ODD15" class="img-fluid"></div>
+                    <div class="col-2 cube-logo" data-cube="ODD16"><img src="img/WebGPic/webg16.png" alt="ODD16" class="img-fluid"></div>
+                    <div class="col-2 cube-logo" data-cube="ODD17"><img src="img/WebGPic/webg17.png" alt="ODD17" class="img-fluid"></div>
                 </div>
             </div>
             <div class="col-md-8 p-3">
